# visa_bot

./: .env.example  .gitignore  README.md  config.py  main.py  project.md  pyproject.toml
core/: __init__.py  agent.py  workflow.py
knowledge/: __init__.py  models.py  store.py
knowledge_base/: chroma.sqlite3
llm/: __init__.py  base.py  factory.py  gemini_provider.py  groq_provider.py
retrieval/: __init__.py  scraper.py  searcher.py  sources.json
ui/: display.py
